fixed spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -152,7 +152,6 @@ main {
 
 .skillsContainer{
   display: text-align;
-  height: 55vh;
   min-height: 60vh;
   
 }
